BUG: Lists breaks the div they live in.

--- a/content/static/css/my.css
+++ b/content/static/css/my.css
@@ -58,14 +58,16 @@ img.align-center, .figure.align-center, object.align-center {
 /* Fix for list bullets overlapping floating images
    See: http://stackoverflow.com/questions/710158/why-do-my-list-item-bullets-overlap-floating-elements */
 ul {
+	padding-left: 1em;
     list-style: outside disc;
-    margin-left: 1em;
+    margin-left: 0em;
 }
 
 ul li {
     position: relative;
     left: 2em;
-    padding-right: 1em;    
+    padding-right: 2em;
+    margin:0;  
 }
 
 .figure-caption {
